Updated plugin loader -- added plugin caching