@@ -10,8 +10,6 @@ package org.bungeni.utils.externalplugin;
 //~--- non-JDK imports --------------------------------------------------------
 
 import java.net.MalformedURLException;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 import org.bungeni.extutils.BungeniEditorProperties;
 
 import org.jdom.input.SAXBuilder;
@@ -22,9 +20,10 @@ import java.io.File;
 import java.io.FilenameFilter;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.HashMap;
 
 /**
- *
+ * Loads external plugins from the file system
  * @author Ashok Hariharan
  */
 public class ExternalPluginLoader {
@@ -32,6 +31,11 @@ public class ExternalPluginLoader {
         org.apache.log4j.Logger.getLogger(ExternalPluginLoader.class.getName());
     String     pathToPluginsRoot = "";
     SAXBuilder pluginBuilder     = null;
+
+    /**
+     * Static plugins cache -- load once - call multiple times philosophy
+     */
+    private static HashMap<String, ExternalPlugin> externalPluginCache = new HashMap<String,ExternalPlugin>();
 
     public ExternalPluginLoader(String pluginSubFolder) {
         pathToPluginsRoot = System.getProperty("user.dir") + File.separator + pluginSubFolder;
@@ -75,24 +79,61 @@ public class ExternalPluginLoader {
         }
     }
 
-    public boolean loadPlugin(String pluginName) {
-        boolean bLoader =false;
+    /**
+     * Builds an array of dependent jar files for the plugin
+     * @param foundPlugin
+     * @return
+     */
+    private ArrayList<URL> buildUrlListForPluginClassLoader (ExternalPlugin foundPlugin) {
+        ArrayList<URL> urlList = new ArrayList<URL>(0);
         try {
-            ExternalPlugin foundPlugin = findPlugin(pluginName);
-            if (foundPlugin != null) {
-                    URL pluginBaseURL = (new File(this.pathToPluginsRoot + File.separator + foundPlugin.PluginBaseFolder + File.separator)).toURI().toURL();
-                    ArrayList<URL> urlList = new ArrayList<URL>(0);
-                    for (String depJar :  foundPlugin.dependentJars) {
-                        URL depURL = new URL(pluginBaseURL.toString() + depJar);
-                        urlList.add(depURL);
-                    }
-
-                }
-            bLoader = true;
+            URL pluginBaseURL = (new File(this.pathToPluginsRoot + File.separator + foundPlugin.PluginBaseFolder + File.separator)).toURI().toURL();
+            String pluginBasePath = pluginBaseURL.toString();
+            urlList.add(new URL(pluginBasePath + foundPlugin.JarFile));
+            for (String depJar : foundPlugin.dependentJars) {
+                URL depURL = new URL(pluginBasePath + depJar);
+                urlList.add(depURL);
+            }
         } catch (MalformedURLException ex) {
+            log.error("buildUrlListForPluginClassLoader : " + ex.getMessage());
+        } finally {
+            return urlList;
+        }
+
+    }
+
+    /**
+     * Checks if the plugin has already been loaded into a static cache.
+     * If it is in the cache returns the plugin from the cache, otherwise loads the plugin adds it to the cache and returns the newly instantiated plugin object
+     * @param pluginName
+     * @return
+     */
+    public ExternalPlugin loadPlugin(String pluginName) {
+        ExternalPlugin aPlugin = null;
+        try {
+            if (!externalPluginCache.containsKey(pluginName)) {
+                //find the plugin by name
+                ExternalPlugin foundPlugin = findPlugin(pluginName);
+                if (foundPlugin != null) {
+                        //if found build the urls for the URL class loader
+                         ArrayList<URL> pluginLibsClassPath = buildUrlListForPluginClassLoader(foundPlugin);
+                         //build the classloader for the plugin
+                         PostDelegationClassLoader classLoader = new PostDelegationClassLoader(pluginLibsClassPath.toArray(new URL[pluginLibsClassPath.size()]));
+                         //instantiate the plugin
+                         foundPlugin.setPluginClassLoader(classLoader);
+                         foundPlugin.instantiatePlugin();
+                         externalPluginCache.put(pluginName, foundPlugin);
+                         aPlugin = externalPluginCache.get(pluginName);
+                    } else {
+                    log.error("loadPlugin : " + pluginName + " was not found");
+                    }
+            } else {
+                aPlugin = externalPluginCache.get(pluginName);
+            }
+        } catch (Exception ex) {
           log.error("loadPlugin : " + ex.getMessage());
         } finally {
-            return bLoader;
+            return aPlugin;
         }
     }
 
